[Frontend] Fix "any" notification setting in dark mode
Follow-up to 0fdadec189d5bdf47e7f5a8037826d2f6b9deef4.

--- a/src/static/room-dark.css
+++ b/src/static/room-dark.css
@@ -51,6 +51,9 @@
   color: white;
   background: black;
 }
+.dark #notifies-any {
+  color: #c0c0c0;
+}
 .dark .update-message a {
   color: #008000 !important;
 }
